# chess

./: CMakeLists.txt  files_test_tmp.cc
src/: main.cc
src/board/: chessgame.cc  chessgame.hh  gametracer.cc  gametracer.hh  moves.cc  moves.hh  player.cc  player.hh
src/ia/: ia.cc  ia.hh
src/listeners/: listener.hh
src/parsing/: pgn-exception.cc  pgn-exception.hh  pgn-move.cc  pgn-move.hh  pgn-parser.cc  pgn-parser.hh  uci.cc  uci.hh
src/pieces/: piece-type.hh  position.hh  position.hxx
src/tools/: uci-time.cc  uci-time.hh
tests/units_tests/: chessgame_tests.cc  chessgame_tests.hh
